# gstreamer-tutorial-cpp

./: CMakeLists.txt  README.md
inc/: basic.h
src/: CMakeLists.txt
src/basic1/: CMakeLists.txt  README.md  basic1.cpp  basic1.h
